@@ -32,6 +32,7 @@ ChangeLog
 [+] * Added gammu-smsd-monitor program to monitor state of SMSD.
 [+] * python-gammu can now monitor SMSD state.
 [-] * Do not try to use OBEX 1.0 it's too old (bug #807).
+[-] * Better parse ATI replies from Samsung (bug #806)
     
 20090126 - 1.22.92
 
